--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,11 +7,20 @@ en:
   sale_price_currency: "Currency"
   sale_price_start_at: "Sale Start Date"
   sale_price_end_at: "Sale End Date"
+  sale_price_calculator_type: "Calculator Type"
+  sale_type_price_editing: 'Edit'
   spree:
     sale_price: "Sale Price"
+    sale_prices: "Sale Prices"
     product_sale_prices: "Product Sale Prices"
     add_product_sale_prices: "Add Product Sale Price"
+    add_sale_type_prices: "Add Product Sale Price"
     sale_price_active: 'Active'
     sale_price_enabled: "Enabled"
     sale_price_start_at: "Sale Start Date"
     sale_price_end_at: "Sale End Date"
+    sale_price_calculator_type: "Calculator Type"
+    sale_price_amount: 'Amount'
+    sale_type_price_editing: 'Edit'
+    sale_type_price_new: 'New'
+    add_product_to_sale_price: 'Add product to sale'
